# volume-filling-curves

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  volume-filling-curves.cpp  volume-filling-curves.h
models/68380/: scene.txt
models/69930/: scene.txt
models/72286/: 72286_centered.stl  scene.txt
models/98480/: 98480_centered.blend  98480_centered.ply  98480_centered_small.stl  98480_centered_tiny.stl  scene.txt  scene_big.txt  scene_sdf.txt  scene_small.txt  scene_tiny.txt
models/box/: scene.txt
models/bunny/: bunny_scaled_100.ply  bunny_scaled_1000.ply  bunny_scaled_250.ply  bunny_scaled_500.ply  capsule.ply  scene.txt  scene_mesh.txt  scene_sdf.txt  sphere.ply
models/dragon/: scene.txt  scene_mesh.txt  scene_sdf.txt
models/icosphere/: icosphere.ply  icosphere.stl  icosphere_highres.stl  icosphere_highres_elongated.stl  icosphere_inner.stl  scene.txt  scene_sdf.txt
models/icosphere_big/: icosphere.ply  scene_sdf.txt
models/plane/: curve.txt  scene.txt
models/roundbox/: scene.txt
models/sphere/: scene.txt
models/stress_test/: scene_sdf.txt  testing.blend  testing.blend1  testing.ply  testing.stl
models/testing/: cube_small.ply  cube_small.stl  cube_small_offset.stl  icosphere_inner_smaller.stl  icosphere_medium.stl  icosphere_small.stl  icosphere_small_offset.stl  scene.txt  scene_mesh.txt  scene_sdf.txt
models/three/: scene.txt
models/torus/: scene.txt
modules/: CMakeLists.txt
modules/include/: happly.h  medial_axis.h  mesh_parser.h  mesh_to_sdf.h  primitive_energies.h  remesh_curve.h  remesh_surface.h  scene_file.h  structures.h  volume_filling_energy.h  volume_path_evolution.h
modules/include/knn-cpp/: knncpp.h
modules/src/: medial_axis.cpp  mesh_parser.cpp  mesh_to_sdf.cpp  primitive_energies.cpp  remesh_curve.cpp  remesh_surface.cpp  scene_file.cpp  volume_filling_energy.cpp  volume_path_evolution.cpp
